# VirtualApp

./: .gitignore  AppConfig.gradle  README.md  VAConfig.gradle  build.gradle  gradle.properties  settings.gradle
annotation/: build.gradle
app/: build.gradle  proguard-rules.pro
app/sdk/: lib.aar  libcommon.aar
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: et_sharp.xml  frame_with_gray_edge_white.xml  gray_rect.xml  sel_guide_btn.xml  select_add_switch.xml  select_minus_switch.xml  selector_collect_star.xml  selector_map_input.xml  selector_map_loc.xml  selector_mock.xml  selector_more_menu.xml  selector_text_color.xml  selector_text_green.xml  white_rect.xml
app/src/main/res/layout/: activity_app_setting.xml  activity_clone_app.xml  activity_home.xml  activity_loading.xml  activity_location_settings.xml  activity_marker.xml  activity_mock_device.xml  activity_mock_location.xml  activity_splash.xml  activity_xposed_manager.xml  content_toolbar.xml  dialog_activate.xml  dialog_app_manager.xml  dialog_change_loc.xml  dialog_change_wifi.xml  dialog_tips.xml  fragment_list_app.xml  (+10 more)
gradle/wrapper/: gradle-wrapper.properties
hooklib/: build.gradle
hooklib/src/main/cpp/: CMakeLists.txt
hooklib/src/main/cpp/casts/: atomic_thread_fence.cpp  atomic_thread_fence.h
hooklib/src/main/cpp/utils/: dlfcn_nougat.cpp  hide_api.cpp
lib/: build.gradle  proguard-rules.pro
lib/src/main/: AndroidManifest.xml
lib/src/main/jni/: Android.mk  Application.mk
security/: mapping.txt  myKey.jks  scorpion.jks  vbox.keystore
xposedcompat/: build.gradle
(+755 files in other folders)
